# N-Chat

./: modal_app.py  test_modal_api.py
Frontend code/: .gitignore  README.md  api.py  pyproject.toml  test_novita.py
Frontend code/vllm/: app_client.py
fine-tune/: .gitignore  README.md  complete_fix.py  dataset.py  full_diagnostic.py  inference.py  merge_adapter.py  pyproject.toml  requirements.txt  test_collate.py  train.py  train_debug.py
vllm/: app.py
